# hospital-ids-hfl

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: index.html  styles.css
docs/episodes/: 00-roadmap.html  01-setup.html  02-data-pipeline.html  03-flower-runtime.html  04-model-clientapp.html  05-serverapp-fedavg.html  06-gateway-global.html  07-orchestration.html  08-evaluation-privacy.html  09-end-to-end-demo.html
docs/renders/: 00_dataset_and_partitioning.html  01_centralized_baseline.html  02_flat_fl_baseline.html  03_hierarchical_flower_demo.html  04_flower_runtime_orchestration.html
hfl_cicids/: __init__.py  checkpointing.py  client_app.py  config.py  metrics.py  server_app.py  task.py
notebooks/: 00_dataset_and_partitioning.ipynb  01_centralized_baseline.ipynb  02_flat_fl_baseline.ipynb  03_hierarchical_flower_demo.ipynb  04_flower_runtime_orchestration.ipynb
reports/: architecture.md  demo_walkthrough.md  metrics_summary.csv
scripts/: __init__.py  _bootstrap.py  ansi.py  build_pages.py  centralized_mlp_baseline.py  configure_flower_profiles.py  download_kaggle.py  evaluate_global_model.py  federated_scaler.py  flat_fl_baseline.py  generate_compose.py  local_flower_runtime.py  local_only_baseline.py  make_partitions.py  predict_with_checkpoint.py  prepare_cicids.py  render_runtime_notebook.py  render_vignettes.py  run_demo.py  run_hierarchical_rounds.py  wait_for_superlinks.py
